@@ -2,7 +2,6 @@ package org.jabref.gui.preferences;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -19,8 +18,6 @@ import javafx.collections.FXCollections;
 import org.jabref.gui.DialogService;
 import org.jabref.gui.util.DirectoryDialogConfiguration;
 import org.jabref.logic.l10n.Localization;
-import org.jabref.model.entry.field.StandardField;
-import org.jabref.model.metadata.FilePreferences;
 import org.jabref.preferences.JabRefPreferences;
 import org.jabref.preferences.NewLineSeparator;
 
@@ -32,7 +29,6 @@ import de.saxsys.mvvmfx.utils.validation.Validator;
 public class FileTabViewModel implements PreferenceTabViewModel {
 
     private final BooleanProperty openLastStartupProperty = new SimpleBooleanProperty();
-    private final BooleanProperty backupOldFileProperty = new SimpleBooleanProperty();
     private final StringProperty noWrapFilesProperty = new SimpleStringProperty("");
     private final BooleanProperty resolveStringsBibTexProperty = new SimpleBooleanProperty();
     private final BooleanProperty resolveStringsAllProperty = new SimpleBooleanProperty();
@@ -64,7 +60,7 @@ public class FileTabViewModel implements PreferenceTabViewModel {
         mainFileDirValidator = new FunctionBasedValidator<>(
                 mainFileDirProperty,
                 input -> {
-                    Path path = Paths.get(mainFileDirProperty.getValue());
+                    Path path = Path.of(mainFileDirProperty.getValue());
                     return (Files.exists(path) && Files.isDirectory(path));
                 },
                 ValidationMessage.error(String.format("%s > %s > %s %n %n %s",
@@ -80,7 +76,6 @@ public class FileTabViewModel implements PreferenceTabViewModel {
     @Override
     public void setValues() {
         openLastStartupProperty.setValue(preferences.getBoolean(JabRefPreferences.OPEN_LAST_EDITED));
-        backupOldFileProperty.setValue(preferences.getBoolean(JabRefPreferences.BACKUP));
         noWrapFilesProperty.setValue(preferences.get(JabRefPreferences.NON_WRAPPABLE_FIELDS));
         resolveStringsAllProperty.setValue(preferences.getBoolean(JabRefPreferences.RESOLVE_STRINGS_ALL_FIELDS)); // Flipped around
         resolveStringsBibTexProperty.setValue(!resolveStringsAllProperty.getValue());
@@ -89,7 +84,7 @@ public class FileTabViewModel implements PreferenceTabViewModel {
         selectedNewLineSeparatorProperty.setValue(preferences.getNewLineSeparator());
         alwaysReformatBibProperty.setValue(preferences.getBoolean(JabRefPreferences.REFORMAT_FILE_ON_SAVE_AND_EXPORT));
 
-        mainFileDirProperty.setValue(preferences.getAsOptional(StandardField.FILE.getName() + FilePreferences.DIR_SUFFIX).orElse(""));
+        mainFileDirProperty.setValue(preferences.getAsOptional(JabRefPreferences.MAIN_FILE_DIRECTORY).orElse(""));
         useBibLocationAsPrimaryProperty.setValue(preferences.getBoolean(JabRefPreferences.BIB_LOC_AS_PRIMARY_DIR));
         if (preferences.getBoolean(JabRefPreferences.AUTOLINK_USE_REG_EXP_SEARCH_KEY)) { // Flipped around
             autolinkUseRegexProperty.setValue(true);
@@ -108,7 +103,6 @@ public class FileTabViewModel implements PreferenceTabViewModel {
     @Override
     public void storeSettings() {
         preferences.putBoolean(JabRefPreferences.OPEN_LAST_EDITED, openLastStartupProperty.getValue());
-        preferences.putBoolean(JabRefPreferences.BACKUP, backupOldFileProperty.getValue());
         if (!noWrapFilesProperty.getValue().trim().equals(preferences.get(JabRefPreferences.NON_WRAPPABLE_FIELDS))) {
             preferences.put(JabRefPreferences.NON_WRAPPABLE_FIELDS, noWrapFilesProperty.getValue());
         }
@@ -121,7 +115,7 @@ public class FileTabViewModel implements PreferenceTabViewModel {
         preferences.setNewLineSeparator(selectedNewLineSeparatorProperty.getValue());
         preferences.putBoolean(JabRefPreferences.REFORMAT_FILE_ON_SAVE_AND_EXPORT, alwaysReformatBibProperty.getValue());
 
-        preferences.put(StandardField.FILE.getName() + FilePreferences.DIR_SUFFIX, mainFileDirProperty.getValue());
+        preferences.put(JabRefPreferences.MAIN_FILE_DIRECTORY, mainFileDirProperty.getValue());
         preferences.putBoolean(JabRefPreferences.BIB_LOC_AS_PRIMARY_DIR, useBibLocationAsPrimaryProperty.getValue());
         preferences.putBoolean(JabRefPreferences.AUTOLINK_USE_REG_EXP_SEARCH_KEY, autolinkUseRegexProperty.getValue());
         preferences.putBoolean(JabRefPreferences.AUTOLINK_EXACT_KEY_ONLY, autolinkFileExactBibtexProperty.getValue());
@@ -151,7 +145,7 @@ public class FileTabViewModel implements PreferenceTabViewModel {
 
     public void mainFileDirBrowse() {
         DirectoryDialogConfiguration dirDialogConfiguration =
-                new DirectoryDialogConfiguration.Builder().withInitialDirectory(Paths.get(mainFileDirProperty.getValue())).build();
+                new DirectoryDialogConfiguration.Builder().withInitialDirectory(Path.of(mainFileDirProperty.getValue())).build();
         dialogService.showDirectorySelectionDialog(dirDialogConfiguration)
                 .ifPresent(f -> mainFileDirProperty.setValue(f.toString()));
     }
@@ -159,8 +153,6 @@ public class FileTabViewModel implements PreferenceTabViewModel {
     // General
 
     public BooleanProperty openLastStartupProperty() { return openLastStartupProperty; }
-
-    public BooleanProperty backupOldFileProperty() { return backupOldFileProperty; }
 
     public StringProperty noWrapFilesProperty() { return noWrapFilesProperty; }
 
