@@ -1,10 +1,8 @@
 package org.jabref.logic.xmp;
 
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
@@ -26,8 +24,8 @@ public class XmpUtilReader {
     private static final String END_TAG = "</rdf:Description>";
 
     private XmpUtilReader() {
-        //See: https://pdfbox.apache.org/2.0/getting-started.html
-        System.setProperty("sun.java2d.cmm", "sun.java2d.cmm.kcms.KcmsServiceProvider"); //To get higher rendering speed on java 8 oder 9 for images
+        // See: https://pdfbox.apache.org/2.0/getting-started.html
+        System.setProperty("sun.java2d.cmm", "sun.java2d.cmm.kcms.KcmsServiceProvider"); // To get higher rendering speed on java 8 oder 9 for images
     }
 
     /**
@@ -50,7 +48,7 @@ public class XmpUtilReader {
      * @return BibtexEntryies found in the PDF or an empty list
      */
     public static List<BibEntry> readXmp(String filename, XmpPreferences xmpPreferences) throws IOException {
-        return XmpUtilReader.readXmp(Paths.get(filename), xmpPreferences);
+        return XmpUtilReader.readXmp(Path.of(filename), xmpPreferences);
     }
 
     /**
@@ -142,8 +140,7 @@ public class XmpUtilReader {
      * Loads the specified file with the basic pdfbox functionality and uses an empty string as default password.
      *
      * @param path The path to load.
-     * @return
-     * @throws IOException from the underlying {@link PDDocument#load(File)}
+     * @throws IOException from the underlying @link PDDocument#load(File)
      */
     public static PDDocument loadWithAutomaticDecryption(Path path) throws IOException {
         // try to load the document
